--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "next-netlify-starter",
-  "version": "0.5.0",
+  "name": "firstappnextjs",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export"
+    "start": "next start",
+    "export": "next export",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7",
     "@netlify/plugin-nextjs": "^4.0.0"
   }
 }
