--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "lint": "next lint"
+    "export": "next export"
   },
   "dependencies": {
     "next": "12.0.7",
